[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tephra"
version = "3.1.0"
description = "Topic-based markdown journal CLI for Obsidian-style vaults"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atom", email = "adam@thermochronsystems.com" }]
keywords = ["journal", "markdown", "obsidian", "cli", "devlog"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/ohshitgorillas/tephra"
Repository = "https://github.com/ohshitgorillas/tephra"
Issues = "https://github.com/ohshitgorillas/tephra/issues"
Changelog = "https://github.com/ohshitgorillas/tephra/blob/main/CHANGELOG.md"

[project.scripts]
tephra = "tephra.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tephra = ["skills/tephra/SKILL.md"]

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.mypy]
python_version = "3.9"
files = ["src/tephra"]
check_untyped_defs = true

[tool.pylint.main]
fail-under = 10.0

[tool.pylint.format]
max-line-length = 100

[tool.pylint."messages control"]
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
]
